--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,8 @@
+aiohttp==3.8.5
+aiosignal==1.3.1
 asgiref==3.7.2
+async-timeout==4.0.3
+attrs==23.1.0
 black==23.7.0
 certifi==2023.7.22
 cffi==1.15.1
@@ -10,10 +14,13 @@ defusedxml==0.7.1
 Django==4.2.4
 django-allauth==0.55.0
 django-crispy-forms==2.0
+frozenlist==1.4.0
 idna==3.4
 isort==5.12.0
+multidict==6.0.4
 mypy-extensions==1.0.0
 oauthlib==3.2.2
+openai==0.27.9
 packaging==23.1
 pathspec==0.11.2
 Pillow==10.0.0
@@ -24,4 +31,6 @@ python3-openid==3.2.0
 requests==2.31.0
 requests-oauthlib==1.3.1
 sqlparse==0.4.4
+tqdm==4.66.1
 urllib3==2.0.4
+yarl==1.9.2
